@@ -11,6 +11,10 @@ Revision history for Fatal
 	* Fixed a bug that would cause unwanted interactions between
 	  autodie and autobox.  (5.8)
 
+	* Wrote a (failing) test case demonstrating that the
+	  autodie pragma could leak across files.  Many thanks to
+	  chocolateboy for bringing this to my attention.
+
 1.10_05 Sun Jun 15 15:46:38 AUSEST 2008
 	* Kludgy support for Perl 5.8 using Scope::Guard and dark
 	  and terrible magicks taken from namespace::clean.
